src/component/timeline/snapshots/envision__component__timeline__snapshot_tests__snapshot_span_selected.snap
---
source: src/component/timeline/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Span Selected─────────────────────────────────────────────┐
│0.0s             0.3s               0.7s               1.0│
│──────────────────────────────────────────────────────────│
│            ╺request-1━━━━━━━━━━━━━━━━━━━━━━━╸            │
│                 ╺db-query━━━━━━━━╸                       │
│      ▼                      ▼                      ▼     │
│──────────────────────────────────────────────────────────│
│[Selected: request-1  0.2s-0.8s  0.6s]                    │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
