src/component/timeline/snapshots/envision__component__timeline__snapshot_tests__snapshot_with_selection.snap
---
source: src/component/timeline/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Selected Timeline─────────────────────────────────────────┐
│0.0s             0.3s               0.7s               1.0│
│──────────────────────────────────────────────────────────│
│            ╺request-1━━━━━━━━━━━━━━━━━━━━━━━╸            │
│                 ╺db-query━━━━━━━━╸                       │
│      ▼                      ▼                      ▼     │
│──────────────────────────────────────────────────────────│
│[Selected: Start  @0.1s]                                  │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
