src/component/timeline/snapshots/envision__component__timeline__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/timeline/snapshot_tests.rs
expression: terminal.backend().to_string()
---
0.0s          0.3s            0.7s             1.0
──────────────────────────────────────────────────
     ▼                   ▼                   ▼
